# OverTheWire-Solutions

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
bandit/: README.md  level00.md  level01.md  level02.md  level03.md  level04.md  level05.md  level06.md  level07.md  level08.md  level09.md  level10.md  level11.md  level12.md  level13.md  level14.md  level15.md  level16.md  level17.md  level18.md  level19.md  level20.md  level21.md  level22.md  level23.md  level24.md  level25.md  level26.md  level27.md  level28.md  level29.md  level30.md  level31.md  level32.md  level33.md
krypton/: README.md  __init__.py
krypton/level00/: README.md  __init__.py  solve.py
krypton/level01/: README.md  __init__.py  solve.py
krypton/level02/: README.md  __init__.py  solve.py
krypton/level03/: README.md  solve.py
krypton/level03/cipher_texts/: found1.txt  found2.txt  found3.txt
krypton/level04/: README.md  solve.py
krypton/level04/cipher_texts/: found1.txt  found2.txt
krypton/level05/: README.md  solve.py
krypton/level05/cipher_texts/: found1.txt  found2.txt  found3.txt
krypton/lib/: __init__.py  caesar.py  ngrams.py  vigenere.py
natas/: README.md  __init__.py
natas/level00/: README.md  solve.py
natas/level01/: README.md  solve.py
natas/level02/: README.md  solve.py
natas/level03/: README.md  solve.py
natas/level04/: README.md  solve.py
natas/level05/: README.md  solve.py
natas/level06/: README.md  solve.py
natas/level07/: README.md  solve.py
natas/level08/: README.md  solve.py
natas/level09/: README.md  solve.py
natas/level10/: README.md  solve.py
natas/level11/: README.md  solve.py
natas/level12/: README.md  solve.py
natas/level13/: README.md  solve.py
natas/level14/: README.md  solve.py
natas/level15/: README.md  solve.py
natas/level16/: README.md  solve.py
natas/level17/: README.md  solve.py
natas/lib/: .natas.env.example  __init__.py  session.py
