[project]
name = "overthewire"
version = "0.1.0"
description = "Educational solutions and scripts for OverTheWire wargames"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["krypton"]