[project]
name = "overthewire"
version = "0.1.0"
description = "Educational solutions and scripts for OverTheWire wargames"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Avuvos" }]
keywords = ["security", "ctf", "wargames", "cryptography", "overthewire", "bandit", "krypton", "natas"]
dependencies = [
    "requests",
    "beautifulsoup4",
    "python-dotenv",
]

[project.urls]
Repository = "https://github.com/Avuvos/OverTheWire-Solutions"

[dependency-groups]
dev = [
    "ruff>=0.8.3",
    "pre-commit>=4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["krypton", "natas"]

[tool.ruff]
target-version = "py311"
line-length = 140

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
    "D",   # pydocstyle
    "ANN", # annotations
    "S",   # bandit (security)
    "A",   # builtins shadowing
    "COM", # commas
    "SIM", # simplify
    "TCH", # type-checking imports
    "PL",  # pylint
    "RUF", # ruff-specific
]
ignore = [
    "D203",    # Conflicts with D211 (No blank line before class docstring)
    "D213",    # Conflicts with D212 (Summary on first line)
    "COM812",  # Trailing comma - handled by formatter
    "PLR2004", # Magic values allowed
    "D415",    # Summary punctuation
    "D100",    # Module docstrings
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D205",    # Blank line after summary

]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
